prod_snapshot_2015-09-24_1030/objects/OLI_Log_Summary__c.object
<CustomObject>
    <description>Summarizes the opportunity line item history on the opportunity line item level for reporting on the SLA</description>
    <fields>
        <fullName>D2GL__c</fullName>
        <label>D2GL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_In_Days__c</fullName>
        <label>Duration In Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2GL__c</fullName>
        <description>Calculated as a Sum of all the duration in different Stages &amp; recorded only in the &apos;Days To Go Live&apos; Stage.</description>
        <label>Hours To Go Live</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>Live Date from the Opportunity Product Line Item.  When date is changed in the line item, the OLILogSummarServices class updates this field as well.</description>
        <inlineHelpText>Live Date from the Opportunity Product Line Item.  When date is changed in the line item, the OLILogSummarServices class updates this field as well.</inlineHelpText>
        <label>Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <formula>Opportunity__r.Gannett_Market_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Partner__c</fullName>
        <formula>Opportunity__r.Media_Partner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend__c</fullName>
        <label>Monthly Spend</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLI_Product_SLA_Type__c</fullName>
        <formula>TEXT(Product__r.SLA_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLI Product SLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLI_Stage__c</fullName>
        <label>OLI Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <label>Opportunity Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sale_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OLI Log Summaries</relationshipLabel>
        <relationshipName>OLI_Log_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_SLA__c</fullName>
        <formula>Product__r.SLA_Bus_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OLI Log Summaries</relationshipLabel>
        <relationshipName>OLI_Log_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OLI Log Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity_Product__c</columns>
        <columns>OLI_Stage__c</columns>
        <columns>Duration__c</columns>
        <columns>Duration_In_Days__c</columns>
        <columns>H2GL__c</columns>
        <columns>D2GL__c</columns>
        <columns>Product_SLA__c</columns>
        <columns>Market_Type__c</columns>
        <columns>Media_Partner__c</columns>
        <columns>Monthly_Spend__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Per_Opp_Prod</fullName>
        <columns>OLI_Product_SLA_Type__c</columns>
        <columns>Opportunity_Product__c</columns>
        <columns>OLI_Stage__c</columns>
        <columns>Duration__c</columns>
        <columns>Duration_In_Days__c</columns>
        <columns>H2GL__c</columns>
        <columns>D2GL__c</columns>
        <columns>Product_SLA__c</columns>
        <columns>Market_Type__c</columns>
        <columns>Media_Partner__c</columns>
        <columns>Monthly_Spend__c</columns>
        <columns>Live_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Product__c</field>
            <operation>equals</operation>
            <value>00kF000000NSeBp</value>
        </filters>
        <label>Per Opp Prod</label>
    </listViews>
    <nameField>
        <label>OLI Log Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLI Log Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>